<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.tgh.economiappen.ExpenseFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvUtgift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/inmatning_av_utgifter"
        android:textStyle="bold"
        android:textSize="22sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/tvTitle_utgift" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etTitle_utgift"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datum"
            android:id="@+id/tvDatum_utgift" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDatum_utgift"
            android:layout_weight="1"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPrice"
            android:text="@string/pris" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPrice"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:id="@+id/tvKategori_utgift" />

        <Spinner
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:id="@+id/spKategori_utgift"
            android:drawSelectorOnTop= "true"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/button_next"
=======
        android:layout_weight="1"
        android:text="@string/button_save"
>>>>>>> tequam
        android:id="@+id/btnSave_utgift"
        android:layout_gravity="center_horizontal"
        android:singleLine="false" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_plus"
        android:id="@+id/btnAdd_expense"
        android:layout_gravity="center_horizontal" />

    </LinearLayout>

<<<<<<< HEAD
=======
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:id="@+id/scan_button" />

>>>>>>> tequam


</LinearLayout>
