<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.tgh.economiappen.InkomstFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:layout_gravity="center_vertical" />


    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvInkomster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/inmatning_av_inkomster"
        android:textStyle="bold"
        android:textSize="22sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/tvTitle_inkomst" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etTitle_inkomst"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datum"
            android:id="@+id/tvDatum_inkomst" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDatum_inkomst"
            android:layout_weight="1"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belopp"
            android:id="@+id/tvBellop" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etBellop"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:id="@+id/tvKategori_inkomst" />

        <Spinner
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:id="@+id/spKategori_inkomst"
            android:drawSelectorOnTop="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
<<<<<<< HEAD
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:id="@+id/btnSave_inkomst"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:id="@+id/btnShowResult"
        android:layout_gravity="center_horizontal" />
=======
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:id="@+id/btnSave_Income"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_plus"
            android:id="@+id/btnAdd_Income"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
>>>>>>> tequam
</LinearLayout>
